Fix encoding application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gestion_vacantes
 
-# --- Configuración de Correo Electrónico (Gmail) ---
+# --- Configuraccn de Correo Electronico (Gmail) ---
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rodotengine@gmail.com
@@ -9,13 +9,13 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# --- Configuración de Base de Datos (PostgreSQL) ---
+# --- Configuracion de Base de Datos (PostgreSQL) ---
 
 # Usamos la variable de entorno DB_URL.
-# IMPORTANTE: Render inyectará la URL completa aquí.
+# IMPORTANTE: Render inyectara la URL completa aqui.
 spring.datasource.url=${DB_URL}
 
-# Si Render no inyecta usuario/pass en la URL, los buscará aquí:
+# Si Render no inyecta usuario/pass en la URL, los buscar aqui:
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
